# nexus_ota_checker

./: .gitignore  LICENSE  README.md  autoupdate_tests.py  check.py  extract_and_mirror.py  pyproject.toml  requirements.txt  tests.py  update.sh
.github/: dependabot.yml
.github/workflows/: scheduled_test.yml  stylecheck.yml  test.yml
testdata/: ota_page.html
