[tool.poetry]
name = "pixel_ota_checker"
version = "1.0.0"
description = "Tooling used for my mirror of Pixel factory images"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
attrs = "21.4.0"
beautifulsoup4 = "4.10.0"
black = "21.12b0"
certifi = "2021.10.8"
chardet = "4.0.0"
click = "8.0.3"
idna = "2.10"
pathspec = "0.9.0"
pySmartDL = "1.3.4"
regex = "2021.11.10"
requests = "2.27.0"
soupsieve = "2.3.1"
toml = "0.10.2"
typed-ast = "1.5.1"
urllib3 = "1.26.7"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
